--- a/cart-detail.html
+++ b/cart-detail.html
@@ -22,15 +22,17 @@
 <body>
 
 
-	<div id="overlayer"></div>
-		<span class="loader">
-		  <span class="loader-inner"></span>
-		</span>
+	<a id="button"></a>
 
-    <!-- structure -->
+	<div id="overlayer"></div>
+	<span class="loader">
+		<span class="loader-inner"></span>
+	</span>
+
+	<!-- structure -->
 	<div class="structure">
 		
-        <!-- header -->
+		<!-- header -->
 		<header id="header" class="header">
 			<div class="container">
 				<div class="row navbar-row">
@@ -60,7 +62,7 @@
 		</header>
 		<!-- header -->
 
-        <!-- structure-two -->
+		<!-- structure-two -->
 		<div class="structure-two">
 
 			<!-- cart-map -->
@@ -154,11 +156,11 @@
 							<ul>
 								<li><a href="">
 									<span>Email: info@pmart.pk 
-								    </span>
+									</span>
 								</a></li>
 								<li><a href="">
 									<span>Phone: 0331-0064323
-                                    </span>
+									</span>
 								</a></li>
 							</ul>
 						</div>
@@ -194,11 +196,11 @@
 	</div>
 	<!-- structure -->
 
- 
+	
 
 
 
-     <!-- jquery -->
+	<!-- jquery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- bootstrap js -->
 	<script src="js/bootstrap.js"></script>
