--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
 </head>
 <body>
 
+	<a id="button"></a>
+
 	<div id="overlayer"></div>
-		<span class="loader">
-		  <span class="loader-inner"></span>
-		</span>
+	<span class="loader">
+		<span class="loader-inner"></span>
+	</span>
 
 	<!-- structure -->
 	<div class="structure">
-         
-       <!-- header -->
+		
+		<!-- header -->
 		<header class="header">
 			<div class="container">
 				<div class="row navbar-row">
@@ -154,8 +156,8 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="grocy-heading">
-						    <h4>Groceries and more</h4>
-						    <a href="store.html"><img src="img/ArrowRight.png"></a>
+							<h4>Groceries and more</h4>
+							<a href="store.html"><img src="img/ArrowRight.png"></a>
 						</div>
 					</div>
 				</div>
@@ -210,8 +212,8 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="grocy-heading">
-						    <h4>60% OFF</h4>
-						    <img src="img/ArrowRight.png">
+							<h4>60% OFF</h4>
+							<img src="img/ArrowRight.png">
 						</div>
 					</div>
 				</div>
@@ -266,8 +268,8 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="grocy-heading">
-						    <h4>Our Pick</h4>
-						    <img src="img/ArrowRight.png">
+							<h4>Our Pick</h4>
+							<img src="img/ArrowRight.png">
 						</div>
 					</div>
 				</div>
@@ -354,12 +356,12 @@
 								<li><a href="">
 									<!-- <i class="fa fa-envelope-o" aria-hidden="true"></i> -->
 									<span>Email: info@pmart.pk 
-								    </span>
+									</span>
 								</a></li>
 								<li><a href="">
 									<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
 									<span>Phone: 0331-0064323
-                                    </span>
+									</span>
 								</a></li>
 							</ul>
 						</div>
@@ -403,6 +405,7 @@
 	<script src="js/bootstrap.js"></script>
 	<!-- custom js -->
 	<script src="js/custom.js"></script>
+
 
 
 </body>
