--- a/order.place.html
+++ b/order.place.html
@@ -20,16 +20,18 @@
 	<script type="text/javascript" src="https://wowjs.uk/dist/wow.min.js"></script>
 </head>
 <body>
-       
-       <div id="overlayer"></div>
-		<span class="loader">
-		  <span class="loader-inner"></span>
-		</span>
+	
+	<a id="button"></a>
 
-	    <!-- structure -->
-		<div class="strucure">
-			
-        <!-- header -->
+	<div id="overlayer"></div>
+	<span class="loader">
+		<span class="loader-inner"></span>
+	</span>
+
+	<!-- structure -->
+	<div class="strucure">
+		
+		<!-- header -->
 		<header id="header" class="header">
 			<div class="container">
 				<div class="row navbar-row">
@@ -87,8 +89,8 @@
 			</div>
 		</header>
 		<!-- header -->
-        
-        <!-- structure-two -->
+		
+		<!-- structure-two -->
 		<div class="structure-two">
 
 			<!-- order-place-sec -->
@@ -119,7 +121,7 @@
 								<p>Ship to 818 N2 Johar Town, Lahore</p>
 								<div class="chat-icons">
 									<a href="tel:03336527336"><img src="img/phone.png"></a>
-								    <a href=""><img src="img/chat.png"></a>
+									<a href=""><img src="img/chat.png"></a>
 								</div>
 							</div>
 							<div class="order-summary-item-parent">
@@ -197,11 +199,11 @@
 							<ul>
 								<li><a href="mailto:info@pmart.pk">
 									<span>Email: info@pmart.pk 
-								    </span>
+									</span>
 								</a></li>
 								<li><a href="tel:03336527336">
 									<span>Phone: 0331-0064323
-                                    </span>
+									</span>
 								</a></li>
 							</ul>
 						</div>
@@ -235,11 +237,11 @@
 		</section>
 		<!-- footer -->
 
-		</div>
-		<!-- structure -->
+	</div>
+	<!-- structure -->
 
 
-	 <!-- jquery -->
+	<!-- jquery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- bootstrap js -->
 	<script src="js/bootstrap.js"></script>
