--- a/shop.html
+++ b/shop.html
@@ -20,17 +20,21 @@
 	<script type="text/javascript" src="https://wowjs.uk/dist/wow.min.js"></script>
 </head>
 <body>
+	
 
+	<a id="button"></a>
+
+	
 	<div id="overlayer"></div>
-		<span class="loader">
-		  <span class="loader-inner"></span>
-		</span>
-    
+	<span class="loader">
+		<span class="loader-inner"></span>
+	</span>
+	
 
-    <!-- structure -->
+	<!-- structure -->
 	<div class="structure">
-		  
-        <!-- header -->
+		
+		<!-- header -->
 		<header id="header" class="header">
 			<div class="container">
 				<div class="row navbar-row">
@@ -345,12 +349,12 @@
 								<li><a href="">
 									<!-- <i class="fa fa-envelope-o" aria-hidden="true"></i> -->
 									<span>Email: info@pmart.pk 
-								    </span>
+									</span>
 								</a></li>
 								<li><a href="">
 									<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
 									<span>Phone: 0331-0064323
-                                    </span>
+									</span>
 								</a></li>
 							</ul>
 						</div>
