--- a/store.html
+++ b/store.html
@@ -20,16 +20,18 @@
 	<script type="text/javascript" src="https://wowjs.uk/dist/wow.min.js"></script>
 </head>
 <body>
-
+	
+	<a id="button"></a>
+	
 	<div id="overlayer"></div>
-		<span class="loader">
-		  <span class="loader-inner"></span>
-		</span>
+	<span class="loader">
+		<span class="loader-inner"></span>
+	</span>
 
 	<!-- structure -->
 	<div class="structure">
-         
-       <!-- header -->
+		
+		<!-- header -->
 		<header class="header">
 			<div class="container">
 				<div class="row navbar-row">
@@ -94,7 +96,7 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="grocy-heading">
-						    <h4>Groceries and more</h4>
+							<h4>Groceries and more</h4>
 						</div>
 					</div>
 				</div>
@@ -295,12 +297,12 @@
 								<li><a href="">
 									<!-- <i class="fa fa-envelope-o" aria-hidden="true"></i> -->
 									<span>Email: info@pmart.pk 
-								    </span>
+									</span>
 								</a></li>
 								<li><a href="">
 									<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
 									<span>Phone: 0331-0064323
-                                    </span>
+									</span>
 								</a></li>
 							</ul>
 						</div>
