--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-3 col-sm-6 col-6 location-column">
+					<div class="col-lg-3 col-md-6 col-sm-6 col-6 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -70,13 +70,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-2 col-sm-6 col-6 login-column mobile-view-sec">
+					<div class="col-lg-2 col-md-6 col-sm-6 col-6 login-column mobile-view-sec">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-lg-7 col-md-7 col-sm-12 col-12">
+					<div class="col-lg-7 col-md-12 col-sm-12 col-12 app-search-column">
 						<div class="app-search">
 							<input type="text" placeholder="Search stores for groceries" name="">
 							<i class="fa fa-search app-search-icon" aria-hidden="true"></i>
