--- a/store.html
+++ b/store.html
@@ -36,13 +36,11 @@
 			<div class="container">
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="index.html"><img src="img/main-logo.png"></a>
-							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
-							</button>
-							<div class="collapse navbar-collapse" id="navbarNav">
-								<ul class="navbar-nav">
+							<div class="header-list">
+								<ul class="header-list-ul">
+									<li><a href="">
+										<img src="img/main-logo.png">
+									</a></li>
 									<li class="nav-item active">
 										<a class="nav-link" href="#">Grocery <span class="sr-only">(current)</span></a>
 									</li>
@@ -54,11 +52,10 @@
 									</li>
 								</ul>
 							</div>
-						</nav>
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-3 col-sm-12 location-column">
+					<div class="col-lg-3 col-md-6 col-sm-6 col-6 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -73,13 +70,19 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-7 col-md-7 col-sm-12 col-12">
+					<div class="col-lg-2 col-md-6 col-sm-6 col-6 login-column mobile-view-sec">
+						<div class="app-login">
+							<button class="btn btn-basic">Login</button>
+							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
+						</div>
+					</div>
+					<div class="col-lg-7 col-md-12 col-sm-12 col-12 app-search-column">
 						<div class="app-search">
 							<input type="text" placeholder="Search stores for groceries" name="">
 							<i class="fa fa-search app-search-icon" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-2 col-sm-12 col-12 login-column">
+					<div class="col-lg-2 col-md-2 col-sm-12 col-12 login-column destop-view">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
