--- a/cart-detail.html
+++ b/cart-detail.html
@@ -24,10 +24,10 @@
 
 	<a id="button"></a>
 
-	<div id="overlayer"></div>
+	<!-- <div id="overlayer"></div>
 	<span class="loader">
 		<span class="loader-inner"></span>
-	</span>
+	</span> -->
 
 	<!-- structure -->
 	<div class="structure">
@@ -45,10 +45,10 @@
 							<div class="collapse navbar-collapse" id="navbarNav">
 								<ul class="navbar-nav">
 									<li class="nav-item active">
-										<a class="nav-link" href="#">Grocery <span class="sr-only">(current)</span></a>
+										<a class="nav-link" href="index.html">Grocery <span class="sr-only">(current)</span></a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" href="#">Restaurants</a>
+										<a class="nav-link" href="reastaurent.html">Restaurants</a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link" href="#">Medicines</a>
@@ -73,7 +73,7 @@
 							<div class="cart-map-heading">
 								<h4><span><img src="img/location-map.png"></span> Delivery Details</h4>
 								<div class="location-map">
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.2450727538794!2d74.27394115060385!3d31.46244395705706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919030aa87cbaab%3A0xdc0b0c45ee2f8e2d!2sGreeLogix%20-%20A%20technology%20company!5e0!3m2!1sen!2s!4v1638528782050!5m2!1sen!2s" width="670" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.2450727538794!2d74.27394115060385!3d31.46244395705706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919030aa87cbaab%3A0xdc0b0c45ee2f8e2d!2sGreeLogix%20-%20A%20technology%20company!5e0!3m2!1sen!2s!4v1638528782050!5m2!1sen!2s" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 								</div>
 								<div class="map-content">
 									<h6>Home</h6>
