--- a/cart.html
+++ b/cart.html
@@ -19,15 +19,17 @@
 	<!-- js animation -->
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<script type="text/javascript" src="https://wowjs.uk/dist/wow.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css">
 </head>
 <body>
 
 	<a id="button"></a>  
 	
-	<div id="overlayer"></div>
+	<!-- <div id="overlayer"></div>
 	<span class="loader">
 		<span class="loader-inner"></span>
-	</span>
+	</span> -->
 
 	<div id="mySidenav" class="sidenav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -36,14 +38,14 @@
 			<p>Faisal Mart (Johar Town)</p>
 			<div class="product-cart">
 				<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-2 pl-0">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-6 pl-0">
 						<div class="cart-carrot-item">
 							<img src="img/product.png">
 							<h6>Mitchells Carrot Pickle</h6>
 							<p>340g • Rs.150</p>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-6">
 						<div class="cart-add product-cart-add-item">
 							<div class="form-group product-cart-form-group">
 								<div class="input-group">
@@ -62,14 +64,14 @@
 			</div>
 			<div class="product-cart">
 				<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-2 pl-0">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-6 pl-0">
 						<div class="cart-carrot-item">
 							<img src="img/olper.png">
 							<h6>Mitchells Carrot Pickle</h6>
 							<p>340g • Rs.150</p>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-6">
 						<div class="cart-add product-cart-add-item">
 							<div class="form-group product-cart-form-group">
 								<div class="input-group">
@@ -89,14 +91,14 @@
 			<!-- row 3 -->
 			<div class="product-cart">
 				<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-2 pl-0">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-6 pl-0">
 						<div class="cart-carrot-item">
 							<img src="img/olper.png">
 							<h6>Mitchells Carrot Pickle</h6>
 							<p>340g • Rs.150</p>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-6">
 						<div class="cart-add product-cart-add-item">
 							<div class="form-group product-cart-form-group">
 								<div class="input-group">
@@ -140,40 +142,36 @@
 				<a href="cart-detail.html"><button class="btn btn-danger">Checkout</button></a>
 			</div>
 		</div>
-		
 	</div>
 
 	<!-- structure -->
 	<div class="structure">
 		
 		<!-- header -->
-		<header id="header" class="header">
+		<header class="header">
 			<div class="container">
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="index.html"><img src="img/main-logo.png"></a>
-							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
-							</button>
-							<div class="collapse navbar-collapse" id="navbarNav">
-								<ul class="navbar-nav">
-									<li class="nav-item active">
-										<a class="nav-link" href="#">Grocery <span class="sr-only">(current)</span></a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link" href="#">Restaurants</a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link" href="#">Medicines</a>
-									</li>
-								</ul>
-							</div>
-						</nav>
+						<div class="header-list">
+							<ul class="header-list-ul">
+								<li><a href="">
+									<img src="img/main-logo.png">
+								</a></li>
+								<li class="nav-item active">
+									<a class="nav-link" href="index.html">Grocery <span class="sr-only">(current)</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="reastaurent.html">Restaurants</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">Medicines</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-3 col-sm-12 location-column">
+					<div class="col-lg-3 col-md-6 col-sm-6 col-8 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -188,13 +186,19 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-7 col-md-7 col-sm-12 col-12">
+					<div class="col-lg-2 col-md-6 col-sm-6 col-4 login-column mobile-view-sec">
+						<div class="app-login">
+							<button class="btn btn-basic">Login</button>
+							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
+						</div>
+					</div>
+					<div class="col-lg-7 col-md-12 col-sm-12 col-12 app-search-column">
 						<div class="app-search">
 							<input type="text" placeholder="Search stores for groceries" name="">
 							<i class="fa fa-search app-search-icon" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-2 col-sm-12 col-13 login-column">
+					<div class="col-lg-2 col-md-2 col-sm-12 col-12 login-column destop-view">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
@@ -234,9 +238,6 @@
 									</li>
 								</ul>
 							</div>
-							<div class="nav-right-button text-right">
-								<button class="btn btn-danger">Place Custom Order</button>
-							</div>
 						</nav>
 					</div>
 				</div>
@@ -253,19 +254,59 @@
 					<div class="row">
 						<div class="col-lg-1 col-md-2 col-sm-12">
 							<div class="conform-card-img">
-								<ul>
-									<li><img src="img/product.png"></li>
-									<li><img src="img/product.png"></li>
-									<li><img src="img/product.png"></li>
-									<li><img src="img/product.png"></li>
-									<li><img src="img/product.png"></li>
-									<li><img src="img/product.png"></li>
-								</ul>
+								<div id="sync2" class="owl-carousel owl-theme">
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								</div>
 							</div>
 						</div>
 						<div class="col-lg-5 col-md-5 col-sm-12">
 							<div class="conform-cart-full-img">
-								<img src="img/product.png">
+								<div id="sync1" class="owl-carousel owl-theme">
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								    <div class="item">
+								        <img src="img/product.png">
+								    </div>
+								</div>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-12">
@@ -320,13 +361,14 @@
 				</div>
 			</section>
 			<!-- conferm cart -->
+			
 
 			<!-- description -->
 			<section class="description">
 				<div class="container">
-					<div class="row">
+					<div class="row description-parent">
 						<div class="col-lg-12 col-md-12 col-sm-12">
-							<div class="description-parent">
+							<div class="">
 								<div class="description-heading">
 									<h6>Description</h6>
 								</div>
@@ -411,6 +453,7 @@
 	<script src="js/bootstrap.js"></script>
 	<!-- custom js -->
 	<script src="js/custom.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.min.js"></script>
 	
 	
 
