--- a/product.html
+++ b/product.html
@@ -26,10 +26,12 @@
 
 	<a id="button"></a>
 
-	<div id="overlayer"></div>
+	<!-- <div id="overlayer"></div>
 	<span class="loader">
 		<span class="loader-inner"></span>
-	</span>
+	</span> -->
+
+	
 	<!-- sidebar -->
 
 	<div id="mySidenav" class="sidenav">
@@ -64,6 +66,59 @@
 					</div>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-12">
+							<div id="sync1" class="owl-carousel owl-theme">
+							    <div class="item">
+							        <h1>1</h1>
+							    </div>
+							    <div class="item">
+							        <h1>2</h1>
+							    </div>
+							    <div class="item">
+							        <h1>3</h1>
+							    </div>
+							    <div class="item">
+							        <h1>4</h1>
+							    </div>
+							    <div class="item">
+							        <h1>5</h1>
+							    </div>
+							    <div class="item">
+							        <h1>6</h1>
+							    </div>
+							    <div class="item">
+							        <h1>7</h1>
+							    </div>
+							    <div class="item">
+							        <h1>8</h1>
+							    </div>
+							</div>
+
+							<div id="sync2" class="owl-carousel owl-theme">
+							    <div class="item">
+							        <h1>1</h1>
+							    </div>
+							    <div class="item">
+							        <h1>2</h1>
+							    </div>
+							    <div class="item">
+							        <h1>3</h1>
+							    </div>
+							    <div class="item">
+							        <h1>4</h1>
+							    </div>
+							    <div class="item">
+							        <h1>5</h1>
+							    </div>
+							    <div class="item">
+							        <h1>6</h1>
+							    </div>
+							    <div class="item">
+							        <h1>7</h1>
+							    </div>
+							    <div class="item">
+							        <h1>8</h1>
+							    </div>
+							</div>
 							<div class="cart-image">
 								<img src="img/product.png">
 							</div>
@@ -149,33 +204,30 @@
 	<div class="structure">
 
 		<!-- header -->
-		<header id="header" class="header">
+		<header class="header">
 			<div class="container">
 				<div class="row navbar-row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="index.html"><img src="img/main-logo.png"></a>
-							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-								<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
-							</button>
-							<div class="collapse navbar-collapse" id="navbarNav">
-								<ul class="navbar-nav">
-									<li class="nav-item active">
-										<a class="nav-link" href="#">Grocery <span class="sr-only">(current)</span></a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link" href="#">Restaurants</a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link" href="#">Medicines</a>
-									</li>
-								</ul>
-							</div>
-						</nav>
+						<div class="header-list">
+							<ul class="header-list-ul">
+								<li><a href="index.html">
+									<img src="img/main-logo.png">
+								</a></li>
+								<li class="nav-item active">
+									<a class="nav-link" href="index.html">Grocery <span class="sr-only">(current)</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="reastaurent.html">Restaurants</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">Medicines</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-3 col-sm-12 location-column">
+					<div class="col-lg-3 col-md-6 col-sm-6 col-8 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -190,13 +242,19 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-7 col-md-7 col-sm-12 col-12">
+					<div class="col-lg-2 col-md-6 col-sm-6 col-4 login-column mobile-view-sec">
+						<div class="app-login">
+							<button class="btn btn-basic">Login</button>
+							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
+						</div>
+					</div>
+					<div class="col-lg-7 col-md-12 col-sm-12 col-12 app-search-column">
 						<div class="app-search">
 							<input type="text" placeholder="Search stores for groceries" name="">
 							<i class="fa fa-search app-search-icon" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-2 col-sm-12 col-12 login-column">
+					<div class="col-lg-2 col-md-2 col-sm-12 col-12 login-column destop-view">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
@@ -236,9 +294,6 @@
 									</li>
 								</ul>
 							</div>
-							<div class="nav-right-button text-right">
-								<button class="btn btn-danger">Place Custom Order</button>
-							</div>
 						</nav>
 					</div>
 				</div>
@@ -252,12 +307,12 @@
 			<section class="product-sec">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-6 col-md-12 col-sm-12">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-3">
 							<div class="product-sec-heading">
 								<h4>Product</h4>
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-12 col-sm-12">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-9">
 							<div class="product-sec-price-dropdown text-right">
 								<div class="w3-dropdown-click">
 									<button onclick="myFunction()" class="w3-button">Sort: Price Low to High<i class="fa fa-angle-down" aria-hidden="true"></i></button>
