--- a/store.html
+++ b/store.html
@@ -23,10 +23,10 @@
 	
 	<a id="button"></a>
 	
-	<div id="overlayer"></div>
+	<!-- <div id="overlayer"></div>
 	<span class="loader">
 		<span class="loader-inner"></span>
-	</span>
+	</span> -->
 
 	<!-- structure -->
 	<div class="structure">
@@ -38,14 +38,14 @@
 					<div class="col-lg-12 col-md-12 col-sm-12">
 							<div class="header-list">
 								<ul class="header-list-ul">
-									<li><a href="">
+									<li><a href="index.html">
 										<img src="img/main-logo.png">
 									</a></li>
 									<li class="nav-item active">
-										<a class="nav-link" href="#">Grocery <span class="sr-only">(current)</span></a>
+										<a class="nav-link" href="index.html">Grocery <span class="sr-only">(current)</span></a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" href="#">Restaurants</a>
+										<a class="nav-link" href="reastaurent.html">Restaurants</a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link" href="#">Medicines</a>
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<div class="row navbar-row location-navbar">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-6 location-column">
+					<div class="col-lg-3 col-md-6 col-sm-6 col-8 location-column">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-2 pr-0">
 								<div class="app-img">
@@ -70,7 +70,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-2 col-md-6 col-sm-6 col-6 login-column mobile-view-sec">
+					<div class="col-lg-2 col-md-6 col-sm-6 col-4 login-column mobile-view-sec">
 						<div class="app-login">
 							<button class="btn btn-basic">Login</button>
 							<i class="fa fa-shopping-bag" aria-hidden="true"></i>
