--- a/cart-detail.html
+++ b/cart-detail.html
@@ -50,7 +50,7 @@
 									<li class="nav-item">
 										<a class="nav-link" href="reastaurent.html">Restaurants</a>
 									</li>
-									<li class="nav-item">
+									<li class="nav-item medicine">
 										<a class="nav-link" href="#">Medicines</a>
 									</li>
 								</ul>
